IaC/kubernetes/apps/network/istio-config/app/mesh/mesh-peerauthentication.yaml
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: mesh-default
  namespace: network
  labels:
    app.kubernetes.io/name: mesh-default-peerauthentication
    app.kubernetes.io/component: service-mesh
    app.kubernetes.io/part-of: helix-platform
    app.kubernetes.io/managed-by: fluxcd
    helix.ai/component: service-mesh
spec:
  mtls:
    mode: STRICT
